Software flow control

--- a/manifests/smlight/slzb07Mg24_ncp-uart-hw.yaml
+++ b/manifests/smlight/slzb07Mg24_ncp-uart-hw.yaml
@@ -10,7 +10,7 @@ gbl:
 
 configuration:
   SL_IOSTREAM_USART_VCOM_BAUDRATE: 115200
-  SL_IOSTREAM_USART_VCOM_FLOW_CONTROL_TYPE: usartHwFlowControlCtsAndRts
+  SL_IOSTREAM_USART_VCOM_FLOW_CONTROL_TYPE: uartFlowControlSoftware
 
 c_defines:
   SL_IOSTREAM_USART_VCOM_PERIPHERAL: USART0
