--- a/manifests/smlight/slzb07Mg24_bootloader.yaml
+++ b/manifests/smlight/slzb07Mg24_bootloader.yaml
@@ -1,11 +1,13 @@
 name: SLZB-07Mg24 Bootloader
-device: EFR32MG24A021F1024IM40
-base_project: src/bootloader-uart-xmodem
+device: EFR32MG24A020F1024IM40
+base_project: src/bootloader
 filename: "{manifest_name}_{gecko_bootloader_version}"
+sdk: "gecko_sdk:4.4.4"
+toolchain: "12.2.1.20221205"
 
 gbl:
   fw_type: gecko-bootloader
-  dynamic: ["gecko_bootloader_version"]
+  gecko_bootloader_version: dynamic
   baudrate: 115200
 
 c_defines:
