--- a/manifests/smlight/slzb07Mg24_opentread_rcp.yaml
+++ b/manifests/smlight/slzb07Mg24_opentread_rcp.yaml
@@ -1,19 +1,19 @@
 name: SLZB-07Mg24 OpenThread RCP
-device: EFR32MG24A021F1024IM40
-base_project: src/ot-rcp
+device: EFR32MG24A020F1024IM40
+base_project: src/openthread_rcp
 filename: "{manifest_name}_{ot_rcp_version.split('/')[-1]}_gsdk_{sdk_version}"
+sdk: "gecko_sdk:4.4.4"
+toolchain: "12.2.1.20221205"
 
 gbl:
-  fw_type: ot-rcp
-  dynamic: ["ot_rcp_version"]
+  fw_type: openthread_rcp
+  ot_rcp_version: dynamic
   baudrate: 460800
-
-configuration:
-  SL_UARTDRV_USART_VCOM_BAUDRATE: 460800
 
 c_defines:
   SL_UARTDRV_USART_VCOM_PERIPHERAL: USART0
   SL_UARTDRV_USART_VCOM_PERIPHERAL_NO: 0
+  SL_UARTDRV_USART_VCOM_BAUDRATE: 460800
 
   SL_UARTDRV_USART_VCOM_TX_PORT: gpioPortA
   SL_UARTDRV_USART_VCOM_TX_PIN:  6
