--- a/manifests/smlight/slzb07_bootloader.yaml
+++ b/manifests/smlight/slzb07_bootloader.yaml
@@ -1,11 +1,13 @@
 name: SLZB-07 Bootloader
 device: EFR32MG21A020F768IM32
-base_project: src/bootloader-uart-xmodem
+base_project: src/bootloader
 filename: "{manifest_name}_{gecko_bootloader_version}"
+sdk: "gecko_sdk:4.4.4"
+toolchain: "12.2.1.20221205"
 
 gbl:
   fw_type: gecko-bootloader
-  dynamic: ["gecko_bootloader_version"]
+  gecko_bootloader_version: dynamic
   baudrate: 115200
 
 c_defines:
