--- a/manifests/smlight/slzb07_opentread_rcp.yaml
+++ b/manifests/smlight/slzb07_opentread_rcp.yaml
@@ -1,21 +1,19 @@
-name: SLZB-06M OpenThread RCP
+name: SLZB-07 OpenThread RCP
 device: EFR32MG21A020F768IM32
-base_project: src/ot-rcp
+base_project: src/openthread_rcp
 filename: "{manifest_name}_{ot_rcp_version.split('/')[-1]}_gsdk_{sdk_version}"
+sdk: "gecko_sdk:4.4.4"
+toolchain: "12.2.1.20221205"
 
 gbl:
-  fw_type: ot-rcp
-  dynamic: ["ot_rcp_version"]
+  fw_type: openthread_rcp
+  ot_rcp_version: dynamic
   baudrate: 460800
-
-configuration:
-  SL_DEVICE_INIT_HFXO_CTUNE: 80
-  SL_UARTDRV_USART_VCOM_BAUDRATE: 460800
-  SL_UARTDRV_USART_VCOM_FLOW_CONTROL_TYPE: usartHwFlowControlNone
 
 c_defines:
   SL_UARTDRV_USART_VCOM_PERIPHERAL: USART0
   SL_UARTDRV_USART_VCOM_PERIPHERAL_NO: 0
+  SL_UARTDRV_USART_VCOM_BAUDRATE: 460800
 
   SL_UARTDRV_USART_VCOM_TX_PORT: gpioPortA
   SL_UARTDRV_USART_VCOM_TX_PIN:  6
@@ -23,9 +21,9 @@ c_defines:
   SL_UARTDRV_USART_VCOM_RX_PORT: gpioPortA
   SL_UARTDRV_USART_VCOM_RX_PIN:  5
 
-  SL_UARTDRV_USART_VCOM_CTS_PORT: 0
-  SL_UARTDRV_USART_VCOM_CTS_PIN:  0
+  SL_UARTDRV_USART_VCOM_CTS_PORT: gpioPortB
+  SL_UARTDRV_USART_VCOM_CTS_PIN:  1
 
-  SL_UARTDRV_USART_VCOM_RTS_PORT: 0
+  SL_UARTDRV_USART_VCOM_RTS_PORT: gpioPortB
   SL_UARTDRV_USART_VCOM_RTS_PIN:  0
 
