--- a/manifests/smlight/slzb07_zigbee_ncp.yaml
+++ b/manifests/smlight/slzb07_zigbee_ncp.yaml
@@ -1,18 +1,29 @@
-name: SLZB-07Mg24 Zigbee
-device: EFR32MG24A021F1024IM40
-base_project: src/ncp-uart-hw
+name: SLZB-07 Zigbee
+device: EFR32MG21A020F768IM32
+base_project: src/zigbee_ncp
 filename: "{manifest_name}_{ezsp_version}"
+sdk: "gecko_sdk:4.4.4"
+toolchain: "12.2.1.20221205"
 
 gbl:
-  fw_type: ncp-uart-hw
-  dynamic: ["ezsp_version"]
+  fw_type: zigbee_ncp
+  ezsp_version: dynamic
   baudrate: 115200
 
 configuration:
+  EMBER_CHILD_TABLE_SIZE: 32
   SL_IOSTREAM_USART_VCOM_BAUDRATE: 115200
   SL_IOSTREAM_USART_VCOM_FLOW_CONTROL_TYPE: usartHwFlowControlCtsAndRts
 
-c_defines:
+c_defines:  
+  EMBER_APS_UNICAST_MESSAGE_COUNT: 32
+  EMBER_BINDING_TABLE_SIZE: 32
+  EMBER_BROADCAST_TABLE_SIZE: 64
+  EMBER_KEY_TABLE_SIZE: 12
+  EMBER_MAX_END_DEVICE_CHILDREN: 32
+  EMBER_PACKET_BUFFER_COUNT: 255
+  EMBER_SOURCE_ROUTE_TABLE_SIZE: 200
+
   SL_IOSTREAM_USART_VCOM_PERIPHERAL: USART0
   SL_IOSTREAM_USART_VCOM_PERIPHERAL_NO: 0
 
