Add baudrate to filenames

--- a/manifests/smlight/slzb06m_zigbee_ncp.yaml
+++ b/manifests/smlight/slzb06m_zigbee_ncp.yaml
@@ -1,7 +1,7 @@
 name: SLZB-06M Zigbee
 device: EFR32MG21A020F768IM32
 base_project: src/zigbee_ncp
-filename: "{manifest_name}_{ezsp_version}"
+filename: "{manifest_name}_{ezsp_version}_{baudrate}"
 sdk: "gecko_sdk:4.4.4"
 toolchain: "12.2.1.20221205"
 
