--- a/manifests/smlight/slzb07Mg24_zigbee_ncp.yaml
+++ b/manifests/smlight/slzb07Mg24_zigbee_ncp.yaml
@@ -1,7 +1,7 @@
 name: SLZB-07Mg24 Zigbee
 device: EFR32MG24A020F1024IM40
 base_project: src/zigbee_ncp
-filename: "{manifest_name}_{ezsp_version}"
+filename: "{manifest_name}_{ezsp_version}_{baudrate}"
 sdk: "gecko_sdk:4.4.4"
 toolchain: "12.2.1.20221205"
 
